<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="right|end"
    android:orientation="vertical">


    <LinearLayout android:id="@+id/toolbar"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/colorPrimaryDark"
                  android:gravity="right|end"
                  android:orientation="horizontal"
                  android:padding="10dp">

        <ImageView
            android:id="@+id/organizationDetail_cancelDialog_imageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:src="@drawable/cancel_icon"
        />
        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/organizationDetail_writeOptions_diologTitle"
            android:textColor="#FFF"
            app:customFont="IRAN-Sans-Bold.ttf"/>

    </LinearLayout>


    <LinearLayout android:id="@+id/organizationDetail_writeEmail_linearLayout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="right"
                  android:padding="10dp"
                  android:paddingLeft="20dp"
                  android:paddingRight="20dp"
                  android:tag="1">

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/organizationDetail_writeEmailOption_text"
            android:textColor="#000"
            app:customFont="IRAN-Sans-Bold.ttf"/>

        <ImageView android:layout_width="30dp"
                   android:layout_height="match_parent"
                   android:gravity="center_vertical"
                   android:src="@drawable/write_email_icon"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/organizationDetail_writeSms_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:tag="2">

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/organizationDetail_writeSmsOption_text"
            android:textColor="#000"
            app:customFont="IRAN-Sans-Bold.ttf"/>

        <ImageView android:layout_width="30dp"
                   android:layout_height="match_parent"
                   android:gravity="center_vertical"
                   android:src="@drawable/write_sms_icon"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/organizationDetail_writeCall_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:tag="3">

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/organizationDetail_writeCallOption_text"
            android:textColor="#000"
            app:customFont="IRAN-Sans-Bold.ttf"/>

        <ImageView android:layout_width="30dp"
                   android:layout_height="match_parent"
                   android:gravity="center_vertical"
                   android:src="@drawable/write_call_icon"/>
    </LinearLayout>

</LinearLayout>