<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/tool_bar"
    android:layout_margin="@dimen/component_default_margin"
    android:background="@android:color/white"
    android:elevation="2dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:targetApi="lollipop">

    <LinearLayout
        android:id="@+id/reminder_date_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/component_default_margin"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:gravity="end"
        android:orientation="horizontal"
        tools:targetApi="lollipop">

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:id="@+id/reminder_dateYear_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_comfort_padding"
            android:text="@string/lable_reminder_noTimeSelected"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_default_padding"
            android:text="@string/lable_reminder_dateDivider"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:id="@+id/reminder_dateMonth_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_comfort_padding"
            android:text="@string/lable_reminder_noTimeSelected"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_default_padding"
            android:text="@string/lable_reminder_dateDivider"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:id="@+id/reminder_dateDay_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_comfort_padding"
            android:text="@string/lable_reminder_noTimeSelected"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_default_padding"
            android:text="@string/lable_reminder_selectDate"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminder_time_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/reminder_date_linearLayout"
        android:layout_margin="@dimen/component_default_margin"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:gravity="end"
        android:orientation="horizontal"
        tools:targetApi="lollipop">

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:id="@+id/reminder_timeHour_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_comfort_padding"
            android:text="@string/lable_reminder_noTimeSelected"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_default_padding"
            android:text="@string/lable_reminder_timeDivider"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:id="@+id/reminder_timeMin_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_comfort_padding"
            android:text="@string/lable_reminder_noTimeSelected"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

        <shirin.tahmasebi.mscfinalproject.view.FontableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/component_default_padding"
            android:text="@string/lable_reminder_selectTime"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_small"
            app:customFont="IRAN-Sans-Bold.ttf" />

    </LinearLayout>

</RelativeLayout>
